stile/style.css
header {
    background-color: #2c3e50;
}

.cs-jumbo {
    background-color: #1abc9c;
    height: 400px;
}

section {
    margin: 2rem 0;
}

.cs-portfolio .col {
    height: 200px;
}

.cs-about {
    height: 500px;
    background-color: #1abc9c;
}

.cs-form {
    height: 450px;
}

.cs-footer-top {
    background-color: #3a546d;
    height: 300px;
}

.cs-footer-bot {
    background-color: #2c3e50;
    height: 100px;
    line-height: 100px;
}


/* container */
[class^="container"] {
    border: 1px dashed black;
    height: 100%;
}

/* row */
[class^="row"] {
    border: 1px dashed red;
    height: 100%;
}

/* col */
[class^="col"] {
    border: 1px dashed blue;
    height: 100%;
}

